--- a/r_file_v5.Rmd
+++ b/r_file_v5.Rmd
@@ -6,143 +6,115 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
 ```
 
-\textbf{I. Introduction} 
+Our objective is to predict the prices of residential homes in Ames, Iowa accurately by exploiting an existing dataset to its best. Our key metric will be the MSE on test data.     
+The training data consists of 66 categorical and quantitative variables extensively describing 1,095 residential homes in Ames, Iowa, and the houses' corresponding price in dollars. Discriminating between relevant and non relevant regressors to foster sparsity in our model is paramount for an efficient and robust model.  
+    
+To achieve this, we first investigate numerical and factor variables sequentially. Applying the log to SalePrice likens it to a Gaussian distribution, with a few outliers. A PCA analysis on numerical variables showed us that 23/28 numerical variables accounted for 99% of the sample variance. Factorwise, we distinguish three types of regressors: factors with an overrepresented level, some with high cardinality, and others with standard level repartition. 
+  
+We then perform elementary factor pruning and intra-factor modality regrouping before using ANOVA to remove factors manually. We do not touch numerical variables but instead rely on our model to make a selection.  
+  
+We choose to fit two linear models using stepwise selection procedure with the AIC criterion to foster sparsity. In the first model, the only modification we impose on the output is applying the logarithm, before removing outliers after testing them. In the second model, we apply a winsorisation method to log(SalePrice) as we noticed that most outliers located to the LHS of price made our model less robust.  In both cases, our best model according to AIC is the backward selection model. Model 1 predicts the test data much more accurately than model 2 (24 000$ vs 33 000$), but model 2 validates the regression assumptions better. XXXX what do we predict better?? We choose to retain model 1 as we want our model to generalise well, and model 1 is satisfactory enough on the postulates. 
+Our final model has an MSE of XX.  
+  
+    
+
+\textbf{I. Data exploration} 
+We first explore the pre-processed data to get intuition of an efficient model. Understanding and preprocessing the data implies that we understand what we are given, check that there are no missing values, and that R correctly categorises each regressor. 
 ```{r, include = FALSE}
 load("DataProject.RData")
-```
-Our objective is to predict the prices of residential homes in Ames, Iowa accurately by exploiting an existing dataset to its best. Our key metric will be the RMSE on test data.     
-The training data consists of a set of 66 categorical and quantitative variables extensively describing 1,095 residential homes in Ames, Iowa, and their corresponding price in dollars. 
-We want to preprocess and explore our data smartly, select the best performing features, and fit the most adapted regression model after validating the key assumptions needed to implement it.     
-  
-We will first explore our data to get intuition of an efficient model. Understanding and preprocessing the data implies that we understand what we are given, check that there are no missing values, and that R correctly categorises each regressor.
-```{r, include = FALSE}
-# Loading the preprocessed dataset 
 home = train[,2:ncol(train)]
-#head(home)
+head(home)
 ```
-The data we are handling is heterogeneous, although it is presented in a structured manner. We are dealing both with categorical and quantitative variables, which we will have to preprocess separately.  
+The data we are handling is heterogeneous, although it is presented in a structured manner. We are dealing both with categorical and quantitative variables, which we will consider separately.  
 `````{r, include = FALSE } 
 summary(home)
 ```
-Displaying the summary of our dataframe, there are 67 columns including the price, meaning a full model would include 66 features and an intercept, and 1,095 observations.  
-The list of features is extensive: not all regressors will be useful to predict house price.  
-The quantitative variables differ in scale and range: prices start from ~35,000 dollars, and can attain 755,000, whereas bedrooms above ground range from 1 to 8 only for instance.  
-Scaling our data could optimise model performance.  
+We observe in the data summary that a full model would include 66 features and an intercept, and 1,095 observations.  
+The list of features is extensive: not all regressors will be useful to predict house price. For instance, we expect the variable MSZoning to have much more impact on the price that the variable Heating, as the heating system is something that can be changed, whereas the location is permanent.  
+Quantitative variables differ in scale and range: prices start from ~35,000 dollars, and can attain 755,000. Before pre-processing, surfaces took higher values than bedrooms above ground which ranged from 1 to 8. Scaling the data allows to harmonise it, so we keep the scaling. 
   
-We first treat missing values before launching into the analysis.  
-```{r}
-cat("There are", sum(is.na(home)), "missing values in our dataframe.")
+```{r, include = FALSE}
+str(home, give.attr = FALSE)
 ```
-```{r}
-# Getting regressor types
-#str(home, give.attr = FALSE)
-```
-First intuition: looking at this dataset, we can see that we have a lot of regressors and that some might be more relevant than others to explain the SalePrice. For instance, the variable MSZoning is expected to have much more impact on the price that the variable Heating, as the heating system is something that can be changed, whereas the location is permanent.  
-Thus, we will perform different types of analysis to keep only the most relevant variables in our model. 
+R appears to cast some factors as integers: mainly areas and ratings. We decide not to consider years as factors as we want our predictions to generalise to other, unencountered years. We recast OverallQual, OverallCond, MoSold, and MSSubClass as factors.  
+  
+All quantitative features are integers and price, the output, is the only numeric. We know that R automatically encodes factors, and we choose to keep the by default levels, which are  alphabetically ordered. 
 
-Additionally, R appears to classify some features as integers when they could be considered as factors: mainly factors related to areas and quality ratings. After debating whether we would consider Years as categories, we decided against given that we might come across a previously unencountered year in the test data which would nullify the interest of using year as a factor.
-  
-All quantitative features are integers and price, the output, is the only numeric.  
-Factor variables are automatically numerically encoded by R, which assigns them to ascending levels using their alphabetical order. Note that this might bias the data by assigning a higher value to one level versus another without any ground to do so.  
-```{r}
+```{r, include = FALSE}
 home$OverallQual = as.factor(home$OverallQual)
 home$OverallCond = as.factor(home$OverallCond)
 home$MoSold = as.factor(home$MoSold)
 home$MSSubClass = as.factor(home$MSSubClass)
-home$Fireplaces = as.factor(home$Fireplaces)
-# head(home)
 ```
 
+We first treat missing values before launching into the analysis.  
 ```{r}
-# str(home)
+cat("There are", sum(is.na(home)), "missing values in our dataframe.")
 ```
+
 
 \textbf{II. Exploratory data analysis / initial modeling} 
 
-1. Numerical analysis  
-We will extract trends and relationships among the regressors. Comparing them is also essential, for instance using pairplots.
+1. Numerical analysis.  
+We describe the output data before analysing the correlation matrix. A PCA analysis we performed showed us that 23/28 numerical variables accounted for 99% of the variance. We left it out for concision. 
 ```{r}
 # Extracting all numerical variables
 nums = unlist(lapply(home, is.numeric))
 home_numerical = (home[ , nums])
 ```
-
 We first set out to observe the output, SalePrice. 
-```{r}
+```{r, fig.width = 5, fig.height = 4, fig.align = "center"}
 par(mfrow=c(1,2))
 # A few observations on SalePrice. 
-hist(home_numerical$SalePrice, main = "SalePrice")
-boxplot(home_numerical$SalePrice, main = "SalePrice")
+hist(home_numerical$SalePrice, main = "SalePrice", cex.main = 0.8, cex.axis = 0.5, cex.lab = 0.5)
+boxplot(home_numerical$SalePrice, main = "SalePrice", cex.main = 0.8, cex.axis = 0.5, cex.lab = 0.5)
 ```
 
 ```{r}
-cat("The mean of Saleprice is", mean(home_numerical$SalePrice), "whereas the median is higher at", median(home_numerical$SalePrice), "indicating that extreme values skew our data to the right.")
+library(e1071) 
+cat("Data skewness is", skewness(home$SalePrice))
 ```
-SalePrice is volatile with many houses to the left hand side, but with an important number of outliers to the right with extreme values which skew the data. To smoothen the output and approach a normal distribution, we will consider the log when fitting our model. 
-```{r}
+SalePrice is highly skewed to the right : we confirm this by noting that Saleprice mean is ~181,196 whereas the median is much lower at ~164,500. 
+SalePrice is volatile with many houses to the left hand side, but with a number of outliers to the right with extreme values. To smoothen the output and approach a normal distribution, we will consider the log when fitting our model. If this isn't enough, we could go a step further by either trimming or modifying outlier values to improve our generalisation error.
+
+```{r, fig.width = 5, fig.height = 3, fig.align = "center"}
 par(mfrow=c(1,3))
-hist(log(home_numerical[,"SalePrice"]))
-boxplot(log(home_numerical[,"SalePrice"]))
-qqnorm(log(home_numerical$SalePrice))
+hist(log(home$SalePrice), cex.main = 1.2, main = "log(SalePrice)")
+boxplot(log(home_numerical[,"SalePrice"]),cex.main = 1.2)
+qqnorm(log(home_numerical$SalePrice),cex.main = 1.2)
 ```
 log(SalePrice) is pretty close to a normal distribution, except for extreme values. 
 
-```{r}
+```{r, fig.width = 3, fig.height = 3, fig.align = "center"}
 # Correlation matrix for numerical features
 library(corrplot)
 R = round(cor(home_numerical),2)
-corrplot(R, method='ellipse')
+corrplot(R, method='ellipse', tl.cex = 0.5)
 ```
-Our intuition is that three feature types mainly drive SalePrices: location, area/surface and quality. Let's start by analysing the numerical variable LotArea.  
-```{r}
-par(mfrow=c(1,2))
-# Area
-hist((home_numerical$LotArea), main = "LotArea")
-boxplot((home_numerical$LotArea), main = "LotArea")
+The numerical features that are the most correlated with SalePrice: GrLivArea, GarageArea and GarageCars, 1st & 2ndFlrSF, YearBuilt GarageYrBuilt & YearRemodAdd. Areas and surfaces are all related to square feet, which we know is a key driver in house sales. The construction or modernisation works are an indicator of overall quality of the housing and the investments that went into it, so it makes sense for them to be correlated to SalePrice. 
+On the contrary, YrSold and BsmtHalfBath are poorly correlated to SalePrice. YrSold is correlated to none of the other features, so it is an irrelevant regressor: the decision to sell a house doesn't have much to do with what drives its price or the price one can sell it at. 
+The correlation matrix does not take into account feature interactions, so we will leave numerical feature selection to our stepwise model procedures. 
+
+Our intuition is that three feature types mainly drive SalePrices: area/surface, location and quality. 
+Let's describe 1stFlrSF as it is the closest feature to square feet with 2ndFloorSF.
+```{r, fig.width = 6, fig.height = 4, fig.align = "center"}
+par(mfrow=c(1,3))
+# Surface
+hist((home_numerical$`1stFlrSF`), main = "1stFloorSF", cex.main = 0.8)
+boxplot((home_numerical$`1stFlrSF`), main = "1stFloorSF", cex.main = 0.8)
+qqnorm(home_numerical$`1stFlrSF`,cex.main = 1.2)
 ```
-We believe that areas, particularly LotArea, will be important when predicting SalePrice. 
-Most areas are located within [-2,2] in our pre-processed dataset, with many outliers towards the left- or the right-hand-side. 
-
-Looking at inter-feature correlations first, we observe that OverallQual is correlated to may other features on the correlation matrix. This indicates that there is a link between it and other variables. This is encouraging as it means that we would be able to remove some columns without losing too much information.
-
-The numerical features that are the most correlated with SalePrice are OverallQual, TotalBsmtSE, X1stElrSF, GrLivArea, GarageCars and GarageArea. On the contrary, MoSold, YrSold and BsmtHalfBath are poorly correlated to SalePrice. As the correlation matrix does not take into account interactions between our features in predicting sales price, we will not infer from this which variables we will keep in our final model.  
-
+From these three graphs, we can assume a Gaussian distribution on 1stFloorSF. 
 ## PCA 
 Given that we have 67 columns, of which 29 are quantitative, let's explore the possibilities we have to reduce our dataframe.  
-Because PCA works best with (scaled) numerical data, we will perform it on our scaled numerical feature columns. 
-```{r}
-home_numerical_output = home_numerical$SalePrice
-home_numerical_features = home_numerical[,2:ncol(home_numerical)] # we will perform the PCA analysis on this dataset. 
-```
+Because PCA works best with (scaled) numerical data, we will perform it on our scaled numerical feature columns.
 
-```{r}
-pca.train = home_numerical_features
-prin_comp = prcomp(pca.train, center = TRUE, scale. = TRUE)
-
-# Compute standard deviation of each principal component
-std_dev = prin_comp$sdev
-
-# Compute variance
-pr_var = std_dev^2
-prop_varex = pr_var/sum(pr_var)
-
-# Cumulative scree plot
-plot(cumsum(prop_varex), 
-     xlab = "Principal Component", 
-     ylab = "Cumulative Proportion of Variance Explained",
-     type = "b")
-
-abline(h=1, col='red')
-abline(v=23, col='black', lty = 3)
-```
-23 of our 28 numerical features account for 99% of the variance.  
-  
 3. Factor analysis  
-For our first contact with the factors, let us get a closer look at level repartition to get an idea of fragmentation within the factors.  
-```{r}
+We first investigate level fragmentation within the factors. We discover three types of factors, of which examples are given below.  
+```{r, fig.width = 5, fig.height = 3, fig.align = "center"}
 par(mfrow=c(1,3))
 # Getting our factors
 factors = unlist(lapply(home, is.factor))
@@ -155,7 +127,6 @@ barplot(table(home_factors$Neighborhood)[order(table(home_factors$Neighborhood))
 # Garage Finish
 barplot(table(home_factors$GarageFinish)[order(table(home_factors$GarageFinish))], main = "GarageFinish")
 ```
-Observing the factor columns, we see three types of repartitions.  
 i) Clear surrepresentation of one level versus the others. 
 In Street and Utilities, which are binary, this is conspicuous. From this we infer that these factors won't be very useful in predicting house price in general: nearly all houses will be in the same category along these factors (and for those who aren't, data is too sparse to generalise well).  
 Note that this is also the case for RoofMatl, Heating, BsmtFinType2, Electrical, GarageCond, GarageQual.  
@@ -167,38 +138,27 @@ iii) Classic factor repartition with reasonable representation of each modality,
 Note that this is also the case for HeatingQC, GarageFinish, BsmtFinType1.  
 
 Intuitively, we said that both location and overall quality will impact SalePrice significantly. Let us check this with anova and ancova tests. 
-```{r}
+```{r, fig.height = 3, fig.align = "center"}
+library(gridExtra)
 # Area
 par(mfrow=c(1,2))
 library(ggplot2)
-ggplot(home, 
+plot1 = ggplot(home, 
        aes(x=MSZoning, 
            y=SalePrice, 
            colour=MSZoning, 
            group = MSZoning, 
            fill = MSZoning)) + geom_boxplot(alpha=0.5, outlier.alpha=0) +geom_jitter(width=0.1)
-```
 
-
-```{r}
 # Overall quality 
-ggplot(home, 
+plot2 = ggplot(home, 
        aes(x=OverallQual, 
            y=SalePrice, 
            colour= OverallQual, 
            group = OverallQual, 
            fill = OverallQual)) + geom_boxplot(alpha=0.5, outlier.alpha=0) +geom_jitter(width=0.1)
-```
 
-
-```{r}
-# Overall condition
-ggplot(home, 
-       aes(x=OverallCond, 
-           y=SalePrice, 
-           colour= OverallCond, 
-           group = OverallCond, 
-           fill = OverallCond)) + geom_boxplot(alpha=0.5, outlier.alpha=0) +geom_jitter(width=0.1)
+grid.arrange(plot1,plot2,ncol=2)
 ```
 
 It appears that houses from the RM and RH areas are less expensive than the ones from FV and RL areas.
@@ -229,9 +189,9 @@ anova(mod5)
 ```
 
 \textbf{III. Modeling and diagnostics}  
-Given the volatility of Saleprice, we will work on its logarithm to smooth its distribution and improve estimated residuals homoscedasticity. 
-After manually removing poorly informative factors and other highly correlated numerical features, we start by fitting a full linear model to predict log(SalePrice).
-Looking at our dataframe, we realised that some factor columns had a lot of differents modalities, with some that appeared very few times. Thus, for more efficiency of our algorithm, we decided to group them. We performed this for Neighbourhood, RoofStyle, Condition1, ExterCond and OverallQual.
+Given the number of regressors, we choose a model favouring feature sparsity. We choose to use a stepwise selection procedure with an AIC criterion. 
+  
+We will predict SalePrice's logarithm to improve our target smoothness and estimated residuals homoscedasticity. In initial models we ran, we noticed that our 8 outliers were located towards the extreme bottom values of SalePrice. They prevented us from validating our postulates, mainly homoscedasticity and gaussianity. Instead of removing them, we use the winsor method to reaffect extreme values and normalise our data. Doing this greatly improves model robustness (the postulates) while diminishing our MSE on test data. 
 
 ```{r}
 winsor1 = function (x, fraction=.05)
@@ -277,10 +237,10 @@ levels(home$OverallQual) <- c(levels(home$OverallQual), "Very_Low")
 home$OverallQual[home$OverallQual %in% c("-4.27238846180047", "-3.28279659466729", "-2.38962301582022")] = "Very_Low"
 ```
 
-Then, using previous analyses and deeper data exploration, we found at that some columns did not help to predict our model, as they could add redundancies or errors. Thus, we decided to remove them:   
-- We removed some features that took almost a single value for all observations: Street, Utilities, RoofMatl, Condition2, Heating, Electrical, Functional, GarageCond.  
-- We also removed some features based on Anova tests: OverallCond, Exterior1st, Exterior2nd.  
-- For some features, we were not sure wether or not they had an influence, so we tested the model with and without them and removed them if they were not improving our score : HeatingQC, SaleCondition, BsmtFinType2, RoofStyle, ExterQual. 
+We noted earlier that many categorical variables could be considered uninformative or redundant. 
+- We remove factors with massively overrepresented categories: Street, Utilities, RoofMatl, Condition2, Heating, Electrical, Functional, GarageCond.
+- Based on Anova tests, we remove other factors to improve model robustness: OverallCond, Exterior1st, Exterior2nd. OverallCond in particular was too specific and weakened our model by creating observations with leverage one.
+- For some features, we were not sure wether or not they had an influence, so we test the model with and without them and remove them if they do not improve our score : HeatingQC, SaleCondition, BsmtFinType2, RoofStyle, ExterQual. 
 
 ```{r}
 col_to_remove = c("Street", "Utilities", "RoofMatl", "Condition2","Heating", "Electrical", "Functional", "GarageCond","Exterior1st", "Exterior2nd", "OverallCond", "HeatingQC", "SaleCondition", "BsmtFinType2","RoofStyle", "ExterQual")
@@ -341,7 +301,7 @@ plot(linear_select_variables_backward, which=5) # Cook
 ```
 Looking at the graphs, the postulates are verified for this model.  
 Now, we want to verify that we don't have outliers in our model. 
-```{r}
+```{r, fig.width = 4, fig.height = 3, fig.align = "center"}
 library(car)
 influenceIndexPlot(linear_select_variables_backward)
 ```
@@ -355,16 +315,15 @@ Based on those results, we decided to run an outlier test for more precision:
 # Finding the outliers of our model
 outlierTest(linear_select_variables_backward)
 ```
-Using this test, 8 possible outliers are given according to the studentized criterion and Bonferroni p-value. We can now test our model without them.
+Using this test, 4 possible outliers are given according to the studentized criterion and Bonferroni p-value. We can now test our model without them.
 Note that those tests are based on confidence intervals and then for this reason, given the number of observations, we could have up to 70 outliers. 
 
-  
 ```{r}
 # Plotting our regression outliers
 home_streamlined[c(199, 336, 596, 633),1:ncol(home_streamlined)]
 ```
 
-```{r}
+```{r, include = FALSE}
 # Building the dataframe without those outliers 
 home_no_outliers = home_streamlined[-c(199, 336, 596, 633), ]
 ```
@@ -406,16 +365,30 @@ For P4, we have tail observations that do not fit the normal distribution. Based
 \textbf{IV. Final models}  
   
 Parameters of our model:  
-Error:  
+
+Finally, our final model without outliers is the one we built reaffecting some features, regrouping some categories for factors and retreving repretitive or non significant variables. Then, we used a backward selection method to reduce the number of features and keep only the necessary ones. Our model had 
+Our final model had 7 outliers that we decided to remove after outlier tests. 
+```{r}
+#linear_backward_without_outliers
+```
+It can be written: lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
+    LotArea + LotConfig + Neighborhood + Condition1 + OverallQual + 
+    YearBuilt + YearRemodAdd + MasVnrType + MasVnrArea + BsmtCond + 
+    BsmtExposure + BsmtFinSF1 + BsmtUnfSF + TotalBsmtSF + CentralAir + 
+    `1stFlrSF` + GrLivArea + BsmtFullBath + FullBath + HalfBath + 
+    KitchenQual + Fireplaces + GarageType + GarageYrBlt + GarageCars + 
+    GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
+
+Looking at the coefficients, the most impactful features are MSZoning, OverallQual and Fireplaces by far, which is not suprising. Indeed, we stated in the beginning that the location was key. Also, the quality is very important because if conditions are not satisfied, then the flat would require some work, which cost would be deducted from the final price. Finally, having a fireplace is a good indicator of the standard of a home, as they tend to be built in expensive flats.
 
 ```{r, include=FALSE}
+# Testing our model on the test set 
 test = test[,2:ncol(test)]
 # Reaffecting test's features to factors
 test$OverallQual = as.factor(test$OverallQual)
 test$OverallCond = as.factor(test$OverallCond)
 test$MoSold = as.factor(test$MoSold)
 test$MSSubClass = as.factor(test$MSSubClass)
-test$Fireplaces = as.factor(test$Fireplaces)
 
 # Regrouping neighbourhoods of less than 20 and 50 sales together
 levels(test$Neighborhood) <- c(levels(test$Neighborhood), "N_Under20Sales","N_Under50Sales") 
@@ -441,32 +414,60 @@ test$OverallQual[test$OverallQual %in% c("-4.27238846180047", "-3.28279659466729
 
 
 ```{r}
-# Test error
-sqrt(mean(test$SalePrice-exp(predict.lm(linear_backward_without_outliers, test)))^2)
+# We look for the average percentage of SalePrice that we fail to predict
+sqrt(mean((test$SalePrice - exp(predict.lm(linear_backward_without_outliers, test))) ^ 2))
 ```
 
-Confidence interval:
 ```{r}
-newgrille = data.frame(LotArea=seq(min(home_no_outliers$LotArea)+1,max(home_no_outliers$LotArea)-1),2) 
-predicgrille = predict.lm(linear_backward_without_outliers, newgrille, interval='confidence',level=0.95) 
-plot(home_no_outliers$LotArea,home_no_outliers$SalePrice,ylab="SalePrice",xlab="LotArea",pch=20)
-#abline(linear_backward_without_outliers,col='red')
-matlines(newgrille$SalePrice,predicgrille,lty=c(1,2,2),col=c("red","blue","blue")) 
-predicgrille = predict.lm(linear_backward_without_outliers,newgrille, interval='prediction',level=0.95) 
-matlines(newgrille$SalePrice,predicgrille,lty=c(1,2,2),col=c("red","green","green"))
-```
-```{r}
-# Assuming gaussianity 
-summary(linear_backward_without_outliers)$coefficients
+residuals = test$SalePrice - exp(predict.lm(linear_backward_without_outliers, test))
+residuals_percent = abs(residuals/test$SalePrice)
+sqrt(mean(residuals_percent))
 ```
 
 
+```{r}
+# RMSE
+sqrt(mean((test$SalePrice - exp(predict.lm(linear_backward_without_outliers, test))) ^ 2))
+```
 
 ```{r}
-p-value:  
-Estimate of the generalization error of our final model:  training data 
-  
+# Average price
+# mean(test$SalePrice)
+```
+
+
+Testing our regression model on the test set, we fail to predict around 13% of the sale price, which corresponds to a RMSE of ~24k, for homes with an average price avec ~180k. This seems acceptable for the price of a home.  
+We obtain a p-value that is below 2.2e-16, which is much less than 0.05. We reject the null hypothesis that the intercept only is better to explain our SalePrice than the model we have built.  
+
+Confidence interval: as our regression model is mostly impacted by factors, doing confidence intervals does not help us visualize the proximity among SalePrice and the most important features. However, doing a 95% confidence interval with LotArea, we notice that this variable is not good at emplaning SalePrice by itself, as the price can double for a same value of LotArea. 
+```{r, fig.width=5, fig.height=3, fig.align="center"}
+model <- lm(SalePrice ~ LotArea, data=home)
+plot(home$LotArea, home$SalePrice, xlab="LotArea", ylab="SalePrice", main="Regression", cex.main=0.8, cex.axis=0.5, cex.lab=0.5)
+abline(model, col="lightblue")
+
+newx <- seq(0, 7, by=0.05)
+pred_interval <- predict(model, newdata=data.frame(LotArea=newx), interval="prediction",
+                         level = 0.95)
+lines(newx, pred_interval[,2], col="orange", lty=2)
+lines(newx, pred_interval[,3], col="orange", lty=2)
+```
+
+
 \textbf{V. Discussion}  
-Final conclusions on our model:  
-key learnings:  
+  
+Final conclusions on our model:
+In the end, we improved a lot the model that we have compared to the one we had when running a linear regression on the original dataframe, as our postulates are now better validated with twice as less features.  
+  
+This project enabled us to apply all the methods we saw in class to analyze a given dataframe and find an acceptable manner to transform it into a more efficient dataframe. Working in pair was very positive, because it allowed us to get more ideas, and to share our understanding of the functions. We could be more efficient next time now that we have gained insights into the R manner to solve a regression problem.  
+To go further, we could have used a lasso regression because we still have around 30 features. We tried to do so but had struggles plotting our postulates afterwards, and therefore could not conclude. However, we will learn how to do it as it could have been very useful.  
+
+
+\textbf{V. Discussion}  
+  
+Final conclusions on our model:
+In the end, we improved a lot the model that we have compared to the one we had when running a linear regression on the original dataframe, as our postulates are now better validated with twice as less features.  
+  
+This project enabled us to apply all the methods we saw in class to analyze a given dataframe and find an acceptable manner to transform it into a more efficient dataframe. Working in pair was very positive, because it allowed us to get more ideas, and to share our understanding of the functions. We could be more efficient next time now that we have gained insights into the R manner to solve a regression problem.  
+To go further, we could have used a lasso regression because we still have around 30 features. We tried to do so but had struggles plotting our postulates afterwards, and therefore could not conclude. However, we will learn how to do it as it could have been very useful.
+Key learnings:  
 Improvements for future projects:
